2011-03-28  Chris Kühl  <chrisk@openismus.com>

	Added get_object convienience method.

	* clutter/src/script.[h|cc]g: Added get_object and helper functions.
	These changes were inspired by get_widget in Gtkmm's Builder class.

2011-02-28  Chris Kühl  <chrisk@openismus.com>

 	Temporarily remove methods with std::map containing a Glib::ValueBase.

	Committing forgotten *.ccg files from before.

	* clutter/src/actor.ccg:
	* clutter/src/box.ccg:

2011-02-27  Chris Kühl  <chrisk@openismus.com>

	Added signal name change forgotten from 2 commits ago.

	* clutter/src/clutter_signals.defs

2011-02-27  Chris Kühl  <chrisk@openismus.com>

	Temporarily removing methods with std::map containing a Glib::ValueBase.

	* clutter/src/actor.hg:
	* clutter/src/box.hg:

2011-02-27  Chris Kühl  <chrisk@openismus.com>

	Fixed inheritance and layout-manager issues in box.hg.

	* clutter/src/box.hg:

2011-02-25  Chris Kühl  <chrisk@openismus.com>

	Example: Added Simple Clutter::Script example.

	* examples/script.cc

1.3.2

2011-02-01  Chris Kühl  <chrisk@openismus.com>

	Added missing methods for vfuncs in LayoutManager.

	* clutter/src/layout-manager.hg:

2011-02-01  Chris Kühl  <chrisk@openismus.com>

	Fixed const issue in get_timeline from Animator.

	* clutter/src/animator.hg:

2011-01-31  Chris Kühl  <chrisk@openismus.com>

	Added refreturn & constversions of set_key, start, and get_timeline to Animator.

	* clutter/src/animator.hg:

2011-01-31  Chris Kühl  <chrisk@openismus.com>

	Added refreturn & constversions to get_pointer_[actor|stage] in InputDevice.

	* clutter/src/input-device.hg:

2011-01-31  Chris Kühl  <chrisk@openismus.com>

	Added refreturn & constversions to get_device & get_core_device in DeviceManager.

	* clutter/src/device-manager.hg:

2011-01-31  Chris Kühl  <chrisk@openismus.com>

	Wrapped ActorBox's clamp_to_pixel method.

	* clutter/src/actor.hg: Wrapped new method.

2011-01-31  Chris Kühl  <chrisk@openismus.com>
